[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui/save_file.gd" type="Script" id=1]
[ext_resource path="res://misc/fnt_tiny.tres" type="DynamicFont" id=2]
[ext_resource path="res://misc/unselected_panel.tres" type="StyleBox" id=3]
[ext_resource path="res://ui/button_begin_selected.png" type="Texture" id=4]
[ext_resource path="res://ui/button_begin.png" type="Texture" id=5]
[ext_resource path="res://ui/button_delete_save.png" type="Texture" id=6]
[ext_resource path="res://ui/button_delete_save_selected.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.141176, 0.133333, 0.203922, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.976471, 0.639216, 0.105882, 1 )

[node name="save_file" type="Control"]
margin_right = 512.0
margin_bottom = 32.0
rect_min_size = Vector2( 256, 32 )
focus_mode = 2
script = ExtResource( 1 )

[node name="bac" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 3 )

[node name="list" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="index" type="Label" parent="list"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
custom_styles/normal = SubResource( 1 )
align = 1
valign = 1

[node name="dividor0" type="VSeparator" parent="list"]
margin_left = 36.0
margin_right = 40.0
margin_bottom = 32.0

[node name="new" type="Label" parent="list"]
visible = false
margin_left = 44.0
margin_right = 185.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 3
text = "FRESH NEW SAVE FILE"
align = 1
valign = 1

[node name="room" type="Label" parent="list"]
margin_left = 44.0
margin_right = 253.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 3
text = "Room: Default Room Name Here"
align = 1
valign = 1

[node name="stats0" type="VBoxContainer" parent="list"]
margin_left = 257.0
margin_right = 346.0
margin_bottom = 32.0
size_flags_horizontal = 3
alignment = 1

[node name="vertices" type="Label" parent="list/stats0"]
margin_top = 5.0
margin_right = 89.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "Vertices"

[node name="time" type="Label" parent="list/stats0"]
margin_top = 18.0
margin_right = 89.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 2 )
text = "Time"

[node name="stats1" type="VBoxContainer" parent="list"]
margin_left = 350.0
margin_right = 440.0
margin_bottom = 32.0
size_flags_horizontal = 3
alignment = 1

[node name="rooms" type="Label" parent="list/stats1"]
margin_top = 5.0
margin_right = 90.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "Rooms"

[node name="hats" type="Label" parent="list/stats1"]
margin_top = 18.0
margin_right = 90.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 2 )
text = "Hats"

[node name="delete_save" type="TextureButton" parent="list"]
margin_left = 444.0
margin_right = 476.0
margin_bottom = 32.0
hint_tooltip = "Destroy this save file"
focus_mode = 1
enabled_focus_mode = 1
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 6 )
texture_focused = ExtResource( 7 )

[node name="begin" type="TextureButton" parent="list"]
margin_left = 480.0
margin_right = 512.0
margin_bottom = 32.0
hint_tooltip = "Enter the game with this save file"
focus_mode = 1
enabled_focus_mode = 1
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 5 )
texture_focused = ExtResource( 4 )

[node name="tween" type="Tween" parent="."]

[connection signal="pressed" from="list/delete_save" to="." method="_on_delete_save_pressed"]
[connection signal="pressed" from="list/begin" to="." method="_on_begin_pressed"]
